added /v1/users/confirmation POST METHOD
