# cmd/app/routes.go
@@ -13,7 +13,7 @@ func (app *Config) NewRouter() *echo.Echo {
 	e.GET("/docs/*", echoSwagger.WrapHandler)
 
 	e.POST("/v1/users/registration", app.BaseHandler.Registration)
-	// e.POST("/v1/users/confirmation", app.BaseHandler.Confirmation)
+	e.POST("/v1/users/confirmation", app.BaseHandler.Confirmation)
 
 	// e.POST("/v1/users/login", app.BaseHandler.Login)
 	// e.POST("/v1/users/logout", app.BaseHandler.Logout)
